--- a/Demos/06-Message-Brokers/EventGrid/Demo-02/food-orders-ui/angular.json
+++ b/Demos/06-Message-Brokers/EventGrid/Demo-02/food-orders-ui/angular.json
@@ -1,8 +1,5 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": false
-  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -11,9 +8,6 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
         }
       },
       "root": "",
@@ -34,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -102,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -110,5 +106,10 @@
       }
     }
   },
-  "defaultProject": "food-orders-ui"
+  "cli": {
+    "analytics": "3e39ae74-1048-453c-ba1b-4db039c030e9",
+    "cache": {
+      "enabled": false
+    }
+  }
 }
