--- a/Demos/06-Message-Brokers/EventGrid/Demo-02/food-orders-ui/tsconfig.json
+++ b/Demos/06-Message-Brokers/EventGrid/Demo-02/food-orders-ui/tsconfig.json
@@ -16,11 +16,11 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "es2020",
     "module": "es2020",
     "lib": [
-      "dom",
-      "es2020"
+      "es2020",
+      "dom"
     ]
   },
   "angularCompilerOptions": {
